# rex_mq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  rex.toml  rust-toolchain.toml
.github/workflows/: rust.yml
benches/: data_codec.rs
bindings/rex4j/: Cargo.toml  pom.xml
bindings/rex4j/src/: lib.rs  rex_cache.rs  rex_handler.rs  rex_jni.rs
bindings/rex4j/src/main/java/com/rex4j/: RexClient.java  RexCommand.java  RexConfig.java  RexData.java  RexHandler.java
bindings/rex4j/src/main/java/com/rex4j/example/: Recv.java  RexEngine.java  Send.java
bindings/rex4j/src/main/java/com/rex4j/exception/: RexException.java
bindings/rex4j/src/main/java/com/rex4j/jni/: NativeLibrary.java  RexNative.java
bindings/rex4p/: Cargo.toml
bindings/rex4p/examples/: rex_benchmark.py  rex_engine.py
bindings/rex4p/src/: client.rs  handler.rs  lib.rs  types.rs
crates/rex-cli/: Cargo.toml
crates/rex-cli/src/: main.rs
crates/rex-client/: Cargo.toml
crates/rex-client/src/: client.rs  config.rs  handler.rs  lib.rs
crates/rex-client/src/transport/: base.rs  mod.rs  quic.rs  tcp.rs  websocket.rs
crates/rex-client/src/transport/quic/: client.rs  mod.rs  sender.rs
crates/rex-client/src/transport/tcp/: client.rs  mod.rs  sender.rs
crates/rex-client/src/transport/websocket/: client.rs  mod.rs  sender.rs
crates/rex-core/: Cargo.toml
crates/rex-core/src/: client.rs  lib.rs  sender.rs  utils.rs
crates/rex-core/src/protocol/: codec.rs  command.rs  data.rs  frame.rs  mod.rs  protocol_type.rs  retcode.rs  types.rs
crates/rex-persistence/: Cargo.toml
crates/rex-persistence/src/: client_state.rs  error.rs  lib.rs  offline.rs  store.rs
crates/rex-sender/: Cargo.toml
crates/rex-sender/src/: lib.rs
crates/rex-sender/src/transport/: mod.rs  quic.rs  tcp.rs  websocket.rs
crates/rex-server/: Cargo.toml
crates/rex-server/src/: config.rs  lib.rs  server.rs
crates/rex-server/src/aggregate/: aggregate_server.rs  config.rs
crates/rex-server/src/handler/: ack.rs  cast.rs  check.rs  del_title.rs  group.rs  login.rs  mod.rs  reg_title.rs  title.rs
crates/rex-server/src/system/: config.rs  mod.rs  registry.rs
crates/rex-server/src/transport/: base.rs  mod.rs  quic.rs  tcp.rs  websocket.rs
crates/rex-server/src/transport/quic/: mod.rs  server.rs
crates/rex-server/src/transport/tcp/: mod.rs  server.rs
crates/rex-server/src/transport/websocket/: server.rs
crates/rex-test/: Cargo.toml
crates/rex-test/benches/: data_codec.rs
crates/rex-test/examples/: port_refuse.rs
crates/rex-test/src/: factory.rs  main.rs
crates/rex-test/tests/: ack_test.rs  aggregate_test.rs  base_test.rs  connect_test.rs  persistence_test.rs
docs/: archtecture.md
examples/: port_refuse.rs  tcp.rs
src/: client.rs  client_handler.rs  command.rs  common.rs  data.rs  lib.rs  main.rs  quic_client.rs  quic_sender.rs  quic_server.rs  sender.rs
src/aggregate/: aggregate_server.rs  config.rs  mod.rs
src/common/: client.rs  client_config.rs  client_handler.rs  mod.rs  server_config.rs
src/core/: client.rs  config.rs  error.rs  handler.rs  mod.rs  server.rs
src/handler/: cast.rs  cast_handler.rs  check.rs  check_handler.rs  del_title.rs  del_title_handler.rs  group.rs  group_handler.rs  login.rs  login_handler.rs  mod.rs  reg.rs  reg_title_handler.rs  title.rs  title_handler.rs
src/net/: client.rs  mod.rs  sender.rs  server.rs
src/protocol/: codec.rs  data.rs  error.rs  mod.rs  retcode.rs
src/quic/: mod.rs  quic_client.rs  quic_server.rs
src/rex_data/: data.rs  mod.rs
src/system/: client_info.rs  config.rs  connection_gaurd.rs  mod.rs  registry.rs
src/tcp/: mod.rs  tcp_client.rs  tcp_sender.rs  tcp_server.rs
src/transport/: mod.rs
src/transport/quic/: client.rs  mod.rs  sender.rs  server.rs
src/transport/tcp/: client.rs  mod.rs  server.rs
src/transport/websocket/: client.rs  mod.rs  sender.rs  server.rs
src/utils/: common.rs  mod.rs  time.rs
tests/: aggregate_test.rs  base_test.rs  common.rs  connect_test.rs
