[workspace]
members = [
  "crates/rex-cli",
  "crates/rex-client",
  "crates/rex-core",
  "crates/rex-sender",
  "crates/rex-server",
  "crates/rex-test",
  "bindings/rex4p",
  "bindings/rex4j",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

# =====================
# Workspace Lints
# =====================
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# =====================
# Workspace Dependencies
# （按功能分组，便于维护）
# =====================
[workspace.dependencies]
rex-core = { path = "crates/rex-core" }
rex-sender = { path = "crates/rex-sender" }
rex-client = { path = "crates/rex-client" }
rex-server = { path = "crates/rex-server" }

# --- Async Runtime & Concurrency ---
tokio = { version = "1.49", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "time",
] }
futures-util = "0.3"
async-trait = "0.1"
kanal = "0.1"
parking_lot = "0.12"

# --- Networking & Transport ---
quinn = "0.11"
rustls = { version = "0.23", default-features = false }
rcgen = "0.14"
tokio-tungstenite = "0.28"

# --- Data Structures & Performance ---
bytes = "1.11"
dashmap = "6.1"
ahash = "0.8"
hdrhistogram = "7.5"
crc32fast = "1.5"
rkyv = "0.8"

# --- IDs, Randomness ---
uuid = { version = "1.19", features = ["v4"] }
rand = "0.9"

# --- Error Handling & Utilities ---
anyhow = "1.0"
thiserror = "2.0"
itertools = "0.14"

# --- Logging & Observability ---
tracing = "0.1"
tracing-subscriber = "0.3"

# --- CLI & Config ---
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# --- Enum Utilities ---
strum = "0.27"
strum_macros = "0.27"

# --- Benchmarking & Testing ---
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }

# --- Language Bindings ---
# Java
jni = "0.21"
# Python
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# =====================
# Build Profiles
# =====================
[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = "thin"

[profile.bench]
inherits = "release"
debug = true
