[workspace]
members = [
  "crates/rex-cli",
  "crates/rex-client",
  "crates/rex-core",
  "crates/rex-persistence",
  "crates/rex-sender",
  "crates/rex-server",
  "crates/rex-test",
  "bindings/rex4p",
  "bindings/rex4j",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

# =====================
# Workspace Lints
# =====================
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# =====================
# Workspace Dependencies
# （按功能分组，便于维护）
# =====================
[workspace.dependencies]
rex-core = { path = "crates/rex-core" }
rex-sender = { path = "crates/rex-sender" }
rex-client = { path = "crates/rex-client" }
rex-server = { path = "crates/rex-server" }
rex-persistence = { path = "crates/rex-persistence" }

# --- Async Runtime & Concurrency ---
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.89"
kanal = "0.1.1"
parking_lot = "0.12.5"
arc-swap = "1.8.1"
once_cell = "1.21.3"

# --- Networking & Transport ---
quinn = "0.11.9"
rustls = { version = "0.23.36", default-features = false }
rcgen = "0.14.7"
tokio-tungstenite = "0.28.0"

# --- Data Structures & Performance ---
bytes = "1.11.1"
dashmap = "6.1.0"
ahash = "0.8.12"
hdrhistogram = "7.5.4"

# Persistence
sled = "0.34.7"
bincode = "1.3.3"

# --- IDs, Randomness ---
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.10.0"

# --- Error Handling & Utilities ---
anyhow = "1.0.101"
thiserror = "2.0.18"
itertools = "0.14.0"

# --- Logging & Observability ---
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# --- CLI & Config ---
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.0"

# --- Enum Utilities ---
strum = "0.27.2"
strum_macros = "0.27.2"

# --- Benchmarking & Testing ---
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
serial_test = "3.3.1"

# --- Language Bindings ---
# Java
jni = "0.21.1"
# Python
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }

# =====================
# Build Profiles
# =====================
[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = "thin"

[profile.bench]
inherits = "release"
debug = true
