[package]
name = "rex4j"
version.workspace = true
edition.workspace = true

[lib]
name = "rex4j"
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = []
skip_crc = ["rex-core/skip_crc", "rex-client/skip_crc"]

[dependencies]
rex-core.workspace = true
rex-client.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
bytes.workspace = true
jni.workspace = true
