[package]
name = "rex4j"
version.workspace = true
edition.workspace = true

[lib]
name = "rex4j"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
rex-core.workspace = true
rex-client.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
jni.workspace = true
rkyv.workspace = true
kanal.workspace = true
