[package]
name = "rex4p"
version.workspace = true
edition.workspace = true

[lib]
name = "rex4p"
crate-type = ["cdylib"]

[lints]
workspace = true


[features]
default = ["sync"]
sync = []
async = ["dep:pyo3-async-runtimes"]


[dependencies]
rex-core = { path = "../../crates/rex-core" }
rex-client = { path = "../../crates/rex-client" }
pyo3.workspace = true
pyo3-async-runtimes = { workspace = true, optional = true }
tokio.workspace = true
anyhow.workspace = true
bytes.workspace = true
async-trait.workspace = true
kanal.workspace = true
