[package]
name = "rex4p"
version.workspace = true
edition.workspace = true

[lib]
name = "rex4p"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
rex-core.workspace = true
rex-client.workspace = true
pyo3.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
kanal.workspace = true
arc-swap.workspace = true
