[package]
name = "rex-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rex-core.workspace = true
rex-client.workspace = true
rex-server.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
strum.workspace = true
bytes.workspace = true
clap.workspace = true
rand.workspace = true
hdrhistogram.workspace = true
