[package]
name = "rex-client"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rex-core = { path = "../rex-core" }
anyhow.workspace = true
bytes.workspace = true
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
dashmap.workspace = true
itertools.workspace = true
