[package]
name = "rex-client"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rex-core.workspace = true
rex-sender.workspace = true
anyhow.workspace = true
bytes.workspace = true
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
dashmap.workspace = true
ahash.workspace = true
fastrand.workspace = true
