[package]
name = "rex-core"
version.workspace = true
edition.workspace = true

[features]
default = []
skip_crc = []

[lints]
workspace = true

[dependencies]
bytes.workspace = true
crc32fast.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
uuid.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tokio.workspace = true
itertools.workspace = true
