[package]
name = "rex-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
parking_lot.workspace = true
