[package]
name = "rex-sender"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rex-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
tokio.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
quinn.workspace = true
tracing.workspace = true
