[package]
name = "rex-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rex-core.workspace = true
rex-sender.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
async-trait.workspace = true
rand.workspace = true
dashmap.workspace = true
tokio.workspace = true
bytes.workspace = true
quinn.workspace = true
rustls.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
rcgen.workspace = true
ahash.workspace = true
rkyv.workspace = true
