[package]
name = "rex-test"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
skip_crc = [
    "rex-core/skip_crc",
    "rex-client/skip_crc",
    "rex-server/skip_crc",
]

[dependencies]
rex-core.workspace = true
rex-client.workspace = true
rex-server.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
strum.workspace = true
crc32fast.workspace = true
bytes.workspace = true
clap.workspace = true
rand.workspace = true
hdrhistogram.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "data_codec"
harness = false
