[package]
name = "rex-test"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rex-core.workspace = true
rex-client.workspace = true
rex-server.workspace = true
rex-persistence.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
strum.workspace = true
bytes.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true
serial_test.workspace = true

[[bench]]
name = "data_codec"
harness = false
